Update 'go-agqklgbj' component image to: quay.io/rhtap_qe/go-agqklgbj:10e9656020d10e325b027de1a1ade51a1fefc3ad@sha256:4490f00b160ffebfd79e5542cb1123266b4e6b4dd005cf80e1d108fc0026a8db

--- a/components/go-agqklgbj/overlays/development/deployment-patch.yaml
+++ b/components/go-agqklgbj/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-agqklgbj
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-agqklgbj:10e9656020d10e325b027de1a1ade51a1fefc3ad@sha256:4490f00b160ffebfd79e5542cb1123266b4e6b4dd005cf80e1d108fc0026a8db
+          name: container-image
